# swift-foundation

Sources/: CMakeLists.txt
Sources/FoundationEssentials/Data/: Data+Reading.swift  Data+Writing.swift  Data.swift
Sources/FoundationEssentials/Error/: CocoaError+FilePath.swift
Sources/FoundationEssentials/FileManager/: FileManager+Directories.swift  FileManager+Files.swift  FileManager+Utilities.swift  FileOperations+Enumeration.swift  FileOperations.swift
Sources/FoundationMacros/: CMakeLists.txt
